[tool.poetry]
name = "machinelearning-wineanalysis"
version = "0.1.0"
description = ""
authors = ["guilhermerabeloo <guilhermerabelo699@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pandas = "^2.2.3"
scikit-learn = "^1.5.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
